[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-tokens-observability"
version = "0.1.0"
description = "Live token-usage observability dashboard for Claude Code, Codex CLI, and Gemini CLI"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{name = "supachai-j"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/supachai-j/ai-tokens-observability"

[project.scripts]
rtk-pulse = "pulse:main"

[tool.setuptools]
py-modules = ["pulse"]

[tool.setuptools.data-files]
"share/rtk-pulse" = ["dashboard.html"]
